--- a/package.json
+++ b/package.json
@@ -5,38 +5,36 @@
   "version": "0.1.0",
   "author": "Vincent Reynaud <vincentreynaud.de@gmail.com>",
   "dependencies": {
-    "animejs": "^3.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "bootstrap": "^4.3.1",
-    "classnames": "^2.2.6",
-    "gatsby": "^2.27.3",
-    "gatsby-image": "^2.0.35",
-    "gatsby-plugin-catch-links": "^2.0.13",
-    "gatsby-plugin-manifest": "^2.0.24",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.31",
-    "gatsby-plugin-sitemap": "^2.0.12",
-    "gatsby-remark-images": "^3.0.10",
-    "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-remark": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.1.17",
-    "node-sass-chokidar": "^1.3.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
+    "gatsby": "^4.9.0",
+    "gatsby-plugin-catch-links": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.0",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-sitemap": "^5.9.0",
+    "gatsby-remark-images": "^6.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-remark": "^5.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scrollspy": "^3.4.0",
-    "reactstrap": "^8.0.0",
-    "rfs": "^8.0.4",
-    "styled-components": "^4.2.0"
+    "reactstrap": "^9.0.1",
+    "rfs": "^9.0.6"
   },
   "devDependencies": {
-    "eslint-config-react-app": "^4.0.1",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.16.4"
+    "@types/react-helmet": "^6.1.5",
+    "eslint-config-react-app": "^7.0.0",
+    "path": "^0.12.7",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.9"
   },
   "keywords": [
     "gatsby"
@@ -47,8 +45,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "repository": {
     "type": "git",
